added artist search function to replace carousel

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
+
 .player__timer {
+    font-family: "Arvo";
     text-align: center;
     margin-bottom: 1rem;
 }
