--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,11 +8,11 @@
     display: flex;
     align-items: center;
     margin: 0;
-    height: 7vh;
+    height: 5vh;
     width: 100%;
     background-color: rgb(44, 39, 39);
     justify-content: space-between;
-    padding-inline: 2rem;
+    padding: 2rem;
     z-index: 999;
     bottom: 0;
     position: fixed;
@@ -24,13 +24,26 @@
         color: $alabaster;
     }
 
+    &__socials {
+        display: flex;
+        width: 50%;
+        justify-content: flex-end;
+        align-items: center;
+        height: 70%;
+    }
+
     &__link {
         color: $hiitmkr-red-primary;
-
+        width: 5%;
+        margin-left: 5%;
+        padding-block: 5px;
 
         &:hover {
             color: $hiitmkr-red-primary;
         }
+    }
 
+    &__icon {
+        width: 100%;
     }
 }
