--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -5,36 +5,8 @@
 @import "../../styles/partials/global";
 
 
-.choices {
-  @include tablet {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.music-player {
-  background-color: $alabaster;
-  padding: 1rem 1rem 0 1rem;
-  margin-block: 1rem;
-  margin-bottom: 5rem;
-  width: 90%;
-  margin-inline: 5%;
-  box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
-  border: 5px solid black;
-  padding-block: 1rem;
-
-}
-
-.main-title {
-  font-size: 1.25rem;
-  @include tablet {
-    font-size: 2rem;
-  }
-}
-
 .search {
-  margin-block: 2%;
-  margin-inline: 5%;
+  margin: 2% 5%;
   width: 90%;
   font-family: "Arvo";
   display: flex;
@@ -44,6 +16,20 @@
   border: 5px solid black;
   text-align: center;
   align-items: center;
+
+  @include tablet {
+    width: 70%;
+    margin-inline: 15%;
+  }
+
+  &__title {
+
+  }
+
+  &__subtitle {
+    align-self: flex-start;
+    font-size: 1rem;
+  }
 
   &__artists {
     display: flex;
@@ -58,7 +44,7 @@
 
   &__input {
     width: 80%;
-    border: 3px solid black;
+    border: 2px solid black;
     border-right: none;
   }
 
@@ -66,13 +52,29 @@
     width:20%;
     background-color: $alabaster;
     color: $hiitmkr-black;
-    border: 3px solid black;
+    border: 2px solid black;
   }
 
   &__results {
-    max-height: 20vh;
     width: 100%;
-    overflow-y: auto;
     margin-block: 1rem;
   }
+}
+
+.music-player {
+  background-color: $alabaster;
+  padding: 1rem 1rem 0 1rem;
+  margin-block: 1rem;
+  margin-bottom: 5rem;
+  width: 90%;
+  margin-inline: 5%;
+  box-shadow: 0 3px 10px 2px rgba(0, 0, 0, 0.5);
+  border: 5px solid black;
+  padding-block: 1rem;
+
+  @include tablet {
+    width: 70%;
+    margin-inline: 15%;
+  }
+
 }
