fixed interval function

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
-@import "./styles/partials/mixins";
-@import "./styles/partials/variables";
-@import "./styles/partials/typography";
-@import "./styles/partials/global";
-
-html {
-    background-color: lightgray;
-}
-
 .app {
     background-color: lightgray;
+    height: 100vh;
+    width: 100vw;
 }
