--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -1,55 +1,33 @@
-@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
 @import "../../styles/partials/mixins";
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography";
 @import "../../styles/partials/global";
 
 .landing {
-  display: flex;
-  width: 100%;
-  height: 85vh;
-  overflow: hidden;
-  z-index: 500;
-
   @include tablet {
     height: 90vh;
   }
 
-  &__more {
-    @include landing-half;
-    background: linear-gradient(rgba(247, 22, 52, 0.7), rgba(247, 22, 52, 0.7)),
-      url(../../assets/moreinfo.jpg) no-repeat center/cover;
-
-    @include tablet {
-      &:hover {
-        width: 150%;
-      }
-    }
-  }
-
   &__login {
-    @include landing-half;
+    display: flex;
+    width: 100%;
+    height: 90vh;
+    overflow: hidden;
     background: linear-gradient(rgba(50, 70, 80, 0.7), rgba(50, 70, 80, 0.7)),
       url(../../assets/login.jpg) no-repeat center/cover;
-
-    @include tablet {
-      &:hover {
-        width: 150%;
-      }
-    }
+    justify-content: center;
+    align-items: center;
   }
 
   &__title {
     width: 85%;
-    font-size: 1.25rem;
-    color: $alabaster;
-    white-space: wrap;
-    font-family: "Arvo", serif;
     text-align: center;
     margin-bottom: 9rem;
+    @include mobile__page-header;
+    color: white;
 
     @include tablet {
-      font-size: 2rem;
+      @include tablet__page-header;
     }
   }
 
@@ -65,6 +43,7 @@
     transition: all 1s;
     margin-top: 2rem;
     position: absolute;
+    font-family: "Thasadith";
 
     &::before,
     &::after {
