--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,90 +1,82 @@
-// @font-face {
-//     font-family: "Avenir Next";
-//     src: url('../../assets/Font/AvenirNextLTPro-Regular.otf') format("opentype");
-//     font-weight: 400;
-// }
+@import url("https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Thasadith:wght@400;700&display=swap');
 
-// @font-face {
-//     font-family: "Avenir Next";
-//     src: url('../../assets/Font/AvenirNextLTPro-Bold.otf') format("opentype");
-//     font-weight: 700;
-// }
+$mainFont: "Thasadith";
 
-// $Avenir-Next: "Avenir Next";
+//mobile typography mixins
+@mixin mobile__page-header {
+    font-family: $mainFont;
+    font-size: 1.5rem; //24px
+    line-height: 2rem;  //32px
+    font-weight: 700;
+  }
 
-// //mobile typography mixins
-// @mixin mobile__page-header {
-//     font-family: $Avenir-Next;
-//     font-size: 1.5rem; //24px
-//     line-height: 2rem;  //32px
-//     font-weight: 700;
-//   }
-
-//   @mixin mobile__section-header {
-//     font-family: $Avenir-Next;
-//     font-size: 0.75rem; //12px
-//     line-height: 1.25px; //20px
-//     font-weight: 700;
-//     text-transform: uppercase;
-//   }
+  @mixin mobile__section-header {
+    font-family: $mainFont;
+    font-size: 0.75rem; //12px
+    line-height: 1.25px; //20px
+    font-weight: 700;
+    text-transform: uppercase;
+  }
   
-//   @mixin mobile__subheader {
-//     font-family: $Avenir-Next;
-//     font-size: 0.8125rem; //13px
-//     line-height: 1.125rem; //18px
-//     font-weight: 700;
-//   }
+  @mixin mobile__subheader {
+    font-family: $mainFont;
+    font-size: 0.8125rem; //13px
+    line-height: 1.125rem; //18px
+    font-weight: 700;
+  }
   
-//   @mixin mobile__body-copy {
-//     font-family: $Avenir-Next;
-//     font-size: 0.8125rem; //13px
-//     line-height: 1.125rem; //18px
-//     font-weight: 400;
-//   }
+  @mixin mobile__body-copy {
+    font-family: $mainFont;
+    font-size: 0.8125rem; //13px
+    line-height: 1.125rem; //18px
+    font-weight: 400;
+  }
   
-//   @mixin mobile__labels-buttons {
-//     font-family: $Avenir-Next;
-//     font-size: 0.75rem; //12px
-//     line-height: 1.25rem; //20px
-//     font-weight: 700;
-//     text-transform: uppercase;
-//   }
+  @mixin mobile__labels-buttons {
+    font-family: $mainFont;
+    font-size: 0.75rem; //12px
+    line-height: 1.25rem; //20px
+    font-weight: 700;
+    text-transform: uppercase;
+  }
   
   
-//   //tablet/desktop typography mixins
-//   @mixin tablet__page-header {
-//     font-family: $Avenir-Next;
-//     font-size: 2.0625rem; //33px
-//     line-height: 2.75rem;  //44px
-//     font-weight: 700;
-//   }
+  //tablet/desktop typography mixins
+  @mixin tablet__page-header {
+    font-family: $mainFont;
+    font-size: 2.0625rem; //33px
+    line-height: 2.75rem;  //44px
+    font-weight: 700;
+  }
   
-//   @mixin tablet__section-header {
-//     font-family: $Avenir-Next;
-//     font-size: 0.75rem; //12px
-//     line-height: 1.25rem;  //20px
-//     font-weight: 700;
-//     text-transform: uppercase;
-//   }
+  @mixin tablet__section-header {
+    font-family: $mainFont;
+    font-size: 0.75rem; //12px
+    line-height: 1.25rem;  //20px
+    font-weight: 700;
+    text-transform: uppercase;
+  }
   
-//   @mixin tablet__subheader {
-//     font-family: $Avenir-Next;
-//     font-size: 0.875rem; //14px
-//     line-height: 1.375rem; //22px
-//     font-weight: 700;
-//   }
+  @mixin tablet__subheader {
+    font-family: $mainFont;
+    font-size: 0.875rem; //14px
+    line-height: 1.375rem; //22px
+    font-weight: 700;
+  }
   
-//   @mixin tablet__body-copy {
-//     font-family: $Avenir-Next;
-//     font-size: 0.875rem; //14px
-//     line-height: 1.375rem; //22px
-//     font-weight: 400;
-//   }
+  @mixin tablet__body-copy {
+    font-family: $mainFont;
+    font-size: 0.875rem; //14px
+    line-height: 1.375rem; //22px
+    font-weight: 400;
+  }
   
-//   @mixin tablet__labels-button {
-//     font-family: $Avenir-Next;
-//     font-size: 0.75rem; //12px
-//     line-height: 1.25rem; //20px
-//     font-weight: 700;
-//     text-transform: uppercase;
-//   }
+  @mixin tablet__labels-button {
+    font-family: $mainFont;
+    font-size: 0.75rem; //12px
+    line-height: 1.25rem; //20px
+    font-weight: 700;
+    text-transform: uppercase;
+  }
