replaced result list from text to images

--- a/src/components/SearchResults/SearchResults.scss
+++ b/src/components/SearchResults/SearchResults.scss
@@ -6,10 +6,15 @@
         background-color: $alabaster;
         color: $hiitmkr-black;
         border: 1px solid black;
+        font-size: 12px;
+        margin-bottom: 10px;
     }
 
     &__list {
-        height: 95%;
+        height: 100%;
         overflow-y: scroll;
+        background-color: lightgray;
+        border-radius: 5px;
+        
     }
 }
